--- a/students/senay/dia-21/styles.css
+++ b/students/senay/dia-21/styles.css
@@ -1,14 +1,14 @@
-.boxes {
+.box-par {
     background-color: #F47732;
     width: 10px;
     height: 10px;
     margin: 5px;
 }
 
-.box-par {
-    background-color: #F47732;
-}
-
 .box-impar {
     background-color: #1148F3;
+    width: 10px;
+    height: 10px;
+    margin: 5px;
+    display: flex;
 }
