--- a/students/senay/REACT-FOLDER/Febrero-React/dia-18-02-dom/src/pages/ejercicios-components/header-ej/style.css
+++ b/students/senay/REACT-FOLDER/Febrero-React/dia-18-02-dom/src/pages/ejercicios-components/header-ej/style.css
@@ -7,6 +7,7 @@
   background-color: bisque;
   padding: 0.5rem;
   border-radius: 5px;
+  margin-right: 1rem;
 }
 .header-link:hover {
   background-color: blueviolet;
