creando repos de front y back

--- a/students/senay/Node-JS/dia-09-03/front-book/src/components/book-header/style.css
+++ b/students/senay/Node-JS/dia-09-03/front-book/src/components/book-header/style.css
@@ -1,5 +1,7 @@
 .headerContainer {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 2rem;
   gap: 2rem;
   background-color: #dfdfdf;
@@ -20,4 +22,7 @@
   background-color: #009600;
   color: white;
   width: 160px;
+}
+.containerLeft {
+  max-width: 400px;
 }
